saco todos las etiquetas p, lleno la descripcion de los productos

--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -172,10 +172,6 @@
                   <p class="card-text letraTitulo">
                     <b>Heladera Gafa HF - No Frost 326 lts</b>
                   </p>
-                  <p class="card-text m-0">Contado: $361.185</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 72.300
-                  </p>
                 </div>
               </div>
             </div>
@@ -195,11 +191,7 @@
               >
                 <div>
                   <p class="card-text letraTitulo">
-                    <b>TCL 50-Pro 5GB</b>
-                  </p>
-                  <p class="card-text m-0">Contado: $ 483.200</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 110.100
+                    <b>Heladera Hisense - Puertas Inverter </b>
                   </p>
                 </div>
               </div>
@@ -220,11 +212,7 @@
               >
                 <div>
                   <p class="card-text letraTitulo">
-                    <b>Motorola Moto 622 </b>
-                  </p>
-                  <p class="card-text m-0">Contado: $ 295.000</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 67.300
+                    <b>Heladera Dream Ciclica con Freezer </b>
                   </p>
                 </div>
               </div>
@@ -245,11 +233,7 @@
               >
                 <div>
                   <p class="card-text letraTitulo">
-                    <b>Motorola E22 64 GB</b>
-                  </p>
-                  <p class="card-text m-0">Contado: $ 407.300</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 93.400
+                    <b>Heladera LG - Bajo consumo 300Lts</b>
                   </p>
                 </div>
               </div>
@@ -270,11 +254,7 @@
               >
                 <div>
                   <p class="card-text letraTitulo">
-                    <b>Galaxy A35 - 5GB</b>
-                  </p>
-                  <p class="card-text m-0">Contado: $ 512.300</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 113.400
+                    <b>Heladera Sigma - No Frost 260 lts</b>
                   </p>
                 </div>
               </div>
@@ -295,11 +275,7 @@
               >
                 <div>
                   <p class="card-text letraTitulo">
-                    <b>Motorola G14 128 GB</b>
-                  </p>
-                  <p class="card-text m-0">Contado: $ 712.600</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 163.200
+                    <b>Heladera Whirpool - No Frost 320 lts </b>
                   </p>
                 </div>
               </div>
