--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -173,6 +173,9 @@
                     <b>Heladera Gafa HF - No Frost 326 lts</b>
                   </p>
                 </div>
+                <div>
+                  <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
               </div>
             </div>
           </div>
@@ -193,6 +196,9 @@
                   <p class="card-text letraTitulo">
                     <b>Heladera Hisense - Puertas Inverter </b>
                   </p>
+                  <div>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -214,6 +220,9 @@
                   <p class="card-text letraTitulo">
                     <b>Heladera Dream Ciclica con Freezer </b>
                   </p>
+                  <div>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -235,6 +244,9 @@
                   <p class="card-text letraTitulo">
                     <b>Heladera LG - Bajo consumo 300Lts</b>
                   </p>
+                  <div>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -256,6 +268,9 @@
                   <p class="card-text letraTitulo">
                     <b>Heladera Sigma - No Frost 260 lts</b>
                   </p>
+                  <div>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -277,6 +292,9 @@
                   <p class="card-text letraTitulo">
                     <b>Heladera Whirpool - No Frost 320 lts </b>
                   </p>
+                  <div>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                  </div>
                 </div>
               </div>
             </div>
