cambio el tamano al boton de ver mas

--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -174,7 +174,7 @@
                   </p>
                 </div>
                 <div>
-                  <a href="#" class="btn btn-primary">Ver más</a>
+                  <a href="#" class="btn btn-primary w-100">Ver más</a>
                 </div>
               </div>
             </div>
@@ -197,7 +197,7 @@
                     <b>Heladera Hisense - Puertas Inverter </b>
                   </p>
                   <div>
-                    <a href="#" class="btn btn-primary">Ver más</a>
+                    <a href="#" class="btn btn-primary w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -221,7 +221,7 @@
                     <b>Heladera Dream Ciclica con Freezer </b>
                   </p>
                   <div>
-                    <a href="#" class="btn btn-primary">Ver más</a>
+                    <a href="#" class="btn btn-primary w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -245,7 +245,7 @@
                     <b>Heladera LG - Bajo consumo 300Lts</b>
                   </p>
                   <div>
-                    <a href="#" class="btn btn-primary">Ver más</a>
+                    <a href="#" class="btn btn-primary w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -269,7 +269,7 @@
                     <b>Heladera Sigma - No Frost 260 lts</b>
                   </p>
                   <div>
-                    <a href="#" class="btn btn-primary">Ver más</a>
+                    <a href="#" class="btn btn-primary w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -293,7 +293,7 @@
                     <b>Heladera Whirpool - No Frost 320 lts </b>
                   </p>
                   <div>
-                    <a href="#" class="btn btn-primary">Ver más</a>
+                    <a href="#" class="btn btn-primary w-100">Ver más</a>
                   </div>
                 </div>
               </div>
