--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -300,6 +300,36 @@
             </div>
           </div>
         </div>
+        <!-- Paginacion -->
+        <div class="mt-4 d-flex justify-content-center align-items-center">
+          <nav aria-label="Paginacion">
+            <ul class="pagination">
+              <li class="page-item">
+                <a class="page-link" href="../index.html" aria-label="Previous">
+                  <span aria-hidden="true">&laquo;</span>
+                </a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="../index.html">1</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="./heladeras.html">2</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="../detalleCategorias.html">3</a>
+              </li>
+              <li class="page-item">
+                <a
+                  class="page-link"
+                  href="../detalleCategorias.html"
+                  aria-label="Next"
+                >
+                  <span aria-hidden="true">&raquo;</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </section>
     </main>
 
