--- a/celulares.html
+++ b/celulares.html
@@ -300,6 +300,36 @@
           </div>
         </div>
       </section>
+      <!--Paginacion -->
+      <div class="mt-4 d-flex justify-content-center align-items-center">
+        <nav aria-label="Paginacion">
+          <ul class="pagination">
+            <li class="page-item">
+              <a
+                class="page-link"
+                href="./pages/heladeras"
+                aria-label="Previous"
+              >
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="./index.html">1</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="./pages/heladeras">2</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="./celulares.html">3</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="./index.html" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </main>
 
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
