terminamos la pagina de "heladera1"

--- a/pages/detalleCategorias.html
+++ b/pages/detalleCategorias.html
@@ -25,8 +25,8 @@
       href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@1,300&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/png" sizes="34x34" href="./img/favicon1.png" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" type="image/png" sizes="34x34" href="../img/favicon1.png" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>
       ElectroHouse: Electrodomésticos, Tecnología y Artículos de Hogar
     </title>
@@ -37,10 +37,10 @@
         <div class="container-fluid">
           <a
             class="navbar-brand d-flex justify-content-end"
-            href="./index.html"
+            href="../index.html"
           >
             <img
-              src="./img/EH1.png"
+              src="../img/EH1.png"
               alt="icono"
               class="img-fluid me-2"
               style="width: 65px; height: 45px"
@@ -142,19 +142,19 @@
       <!-- Video -->
       <article class="mt-2 alturaVide">
         <video width="100%" controls autoplay muted loop class="h-100">
-          <source src="./img/celulares/video.mp4" type="video/mp4" />
+          <source src="../img/celulares/video.mp4" type="video/mp4" />
         </video>
       </article>
       <!-- grilla -->
       <section class="container my-2">
-        <div class="row row-gap-3">
+        <div class="row row-gap-3 d-flex justify-content-evenly">
           <!-- 1 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/celulares/galaxy plegable.jpg"
+                src="../img/productos/Samsung-Zflip5.jpg"
                 class="card-img-top"
                 alt="galaxy plegable"
               />
@@ -165,11 +165,8 @@
                   <p class="card-text letraTitulo">
                     <b>Galaxy Z Flip 5</b>
                   </p>
-                  <p class="card-text m-0">Contado: $361.185</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 72.300
-                  </p>
                 </div>
+                <a href="../pages/telefono1.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
@@ -179,7 +176,7 @@
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/celulares/tcl.webp"
+                src="../img/celulares/tcl.webp"
                 class="card-img-top"
                 alt="celular tcl"
               />
@@ -190,11 +187,8 @@
                   <p class="card-text letraTitulo">
                     <b>TCL 50-Pro 5GB</b>
                   </p>
-                  <p class="card-text m-0">Contado: $ 483.200</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 110.100
-                  </p>
                 </div>
+                <a href="../pages/error404.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
@@ -204,7 +198,7 @@
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/celulares/2 motorola.jpg"
+                src="../img/celulares/2 motorola.jpg"
                 class="card-img-top"
                 alt="celular motorola"
               />
@@ -215,11 +209,8 @@
                   <p class="card-text letraTitulo">
                     <b>Motorola Moto 622 </b>
                   </p>
-                  <p class="card-text m-0">Contado: $ 295.000</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 67.300
-                  </p>
                 </div>
+                <a href="../pages/error404.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
@@ -229,7 +220,7 @@
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/celulares/motorola e22.jpg"
+                src="../img/celulares/motorola e22.jpg"
                 class="card-img-top"
                 alt="celular motorola e22"
               />
@@ -240,11 +231,8 @@
                   <p class="card-text letraTitulo">
                     <b>Motorola E22 64 GB</b>
                   </p>
-                  <p class="card-text m-0">Contado: $ 407.300</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 93.400
-                  </p>
                 </div>
+                <a href="../pages/error404.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
@@ -254,7 +242,7 @@
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/celulares/Samsung Galaxy A35.jpg"
+                src="../img/celulares/Samsung Galaxy A35.jpg"
                 class="card-img-top"
                 alt="galaxy a35"
               />
@@ -265,11 +253,8 @@
                   <p class="card-text letraTitulo">
                     <b>Galaxy A35 - 5GB</b>
                   </p>
-                  <p class="card-text m-0">Contado: $ 512.300</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 113.400
-                  </p>
                 </div>
+                <a href="../pages/error404.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
@@ -279,7 +264,7 @@
               class="card overflow-hidden rounded-3 fondoInf h-100 d-flex flex-column"
             >
               <img
-                src="./img/celulares/motorola_moto_g14_gris_01_l.jpg"
+                src="../img/celulares/motorola_moto_g14_gris_01_l.jpg"
                 class="card-img-top"
                 alt="motorola g14"
               />
@@ -290,11 +275,8 @@
                   <p class="card-text letraTitulo">
                     <b>Motorola G14 128 GB</b>
                   </p>
-                  <p class="card-text m-0">Contado: $ 712.600</p>
-                  <p class="card-text letraCuotas mt-auto">
-                    6 cuotas de $ 163.200
-                  </p>
                 </div>
+                <a href="../pages/error404.html" class="btn text-white botonerror mt-3">Ver más</a>
               </div>
             </div>
           </div>
@@ -309,11 +291,11 @@
             class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
           >
             <a
-              href="./index.html"
+              href="../index.html"
               class="link-underline-opacity-0 d-flex align-items-center gap-2"
             >
               <img
-                src="./img/EH1.png"
+                src="../img/EH1.png"
                 alt="icono"
                 class="img-fluid"
                 style="width: 130px; height: 100px"
@@ -324,7 +306,7 @@
               <h4 class="text-dark">Información</h4>
               <li class="mb-1">
                 <a
-                  href="./pages/nosotros.html"
+                  href="../pages/nosotros.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover"
                   >Acerca de nosotros</a
                 >
