se agregaron cambios e imagenes y se creó la pagina "tv1"

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
-                <p class="card-text">Monitor LED de 52 pulgadas-Noblex</p>
+                <p class="card-text">Monitor LED de 43 pulgadas-Noblex</p>
                 <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
                   ><b>Visitar</b></a
                 >
@@ -387,22 +387,6 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card colorFondoGrilla rounded-4 h-100">
-              <img
-                src="./img/AudioTv/parlantes pc.jpg"
-                class="card-img-top alturaImgGrilla"
-                alt="parlantes para computadora"
-              />
-              <div class="card-body text-center alineaBotonGrilla">
-                <h3 class="card-title"><b>Smart TV</b></h3>
-                <p class="card-text">Parlantes Genius SP-Q USB red</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
-                  ><b>Visitar</b></a
-                >
-              </div>
-            </div>
-          </div>
         </div>
       </section>
       <!-- fin grilla -->
@@ -426,7 +410,7 @@
             </p>
           </div>
           <div>
-            <a href="" class="btn botonHela text-light">
+            <a href="./pages/heladeras.html" class="btn botonHela text-light">
               <b>Buscá la tuya</b>
             </a>
           </div>
@@ -448,7 +432,7 @@
                 class="card container d-flex justify-content-center align-items-center w-100 h-100 p-0"
               >
                 <img
-                  src="./img/publicidades/tarjetas de credito.webp"
+                  src="./img/publicidades/tarjetas de credito.jpg"
                   class="card-img-top publiPadre w-100 h-100"
                   alt="tres tarjetas de credito"
                 />
@@ -479,7 +463,7 @@
             </p>
           </div>
           <div>
-            <a href="./detalleCategorias.html" class="btn botonHela text-light">
+            <a href="./pages/detalleCategorias.html" class="btn botonHela text-light">
               <b>Buscalo!</b>
             </a>
           </div>
