--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@1,300&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/png" sizes="34x34" href="./img/favicon1.png" />
+    <link rel="icon" type="image/png" sizes="34x34" href="../img/favicon1.png" />
     <link rel="stylesheet" href="../css/style.css" />
     <title>
       ElectroHouse: Electrodomésticos, Tecnología y Artículos de Hogar
@@ -37,10 +37,10 @@
         <div class="container-fluid">
           <a
             class="navbar-brand d-flex justify-content-end"
-            href="./index.html"
+            href="../index.html"
           >
             <img
-              src="./img/EH1.png"
+              src="../img/EH1.png"
               alt="icono"
               class="img-fluid me-2"
               style="width: 65px; height: 45px"
@@ -90,7 +90,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link me-5" href="#">Novedades</a>
+                <a class="nav-link me-5" href="../pages/error404.html">Novedades</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -154,7 +154,7 @@
       </div>
       <!-- grilla -->
       <section class="container my-3">
-        <div class="row row-gap-3">
+        <div class="row row-gap-3 d-flex justify-content-evenly">
           <!-- 1 -->
           <div class="col-12 col-md-4 col-lg-3">
             <div
@@ -174,7 +174,7 @@
                   </p>
                 </div>
                 <div>
-                  <a href="#" class="btn btn-primary w-100">Ver más</a>
+                  <a href="../pages/error404.html" class="btn botonerror text-white w-100">Ver más</a>
                 </div>
               </div>
             </div>
@@ -197,7 +197,7 @@
                     <b>Heladera Hisense - Puertas Inverter </b>
                   </p>
                   <div>
-                    <a href="#" class="btn btn-primary w-100">Ver más</a>
+                    <a href="../pages/heladera1.html" class="btn botonerror text-white w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -221,7 +221,7 @@
                     <b>Heladera Dream Ciclica con Freezer </b>
                   </p>
                   <div>
-                    <a href="#" class="btn btn-primary w-100">Ver más</a>
+                    <a href="../pages/error404.html" class="btn botonerror text-white w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -245,7 +245,7 @@
                     <b>Heladera LG - Bajo consumo 300Lts</b>
                   </p>
                   <div>
-                    <a href="#" class="btn btn-primary w-100">Ver más</a>
+                    <a href="../pages/error404.html" class="btn botonerror text-white w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -269,7 +269,7 @@
                     <b>Heladera Sigma - No Frost 260 lts</b>
                   </p>
                   <div>
-                    <a href="#" class="btn btn-primary w-100">Ver más</a>
+                    <a href="../pages/error404.html" class="btn botonerror text-white w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -293,7 +293,7 @@
                     <b>Heladera Whirpool - No Frost 320 lts </b>
                   </p>
                   <div>
-                    <a href="#" class="btn btn-primary w-100">Ver más</a>
+                    <a href="../pages/error404.html" class="btn botonerror text-white w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -340,11 +340,11 @@
             class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
           >
             <a
-              href="./index.html"
+              href="../index.html"
               class="link-underline-opacity-0 d-flex align-items-center gap-2"
             >
               <img
-                src="./img/EH1.png"
+                src="../img/EH1.png"
                 alt="icono"
                 class="img-fluid"
                 style="width: 130px; height: 100px"
@@ -355,7 +355,7 @@
               <h4 class="text-dark">Información</h4>
               <li class="mb-1">
                 <a
-                  href="./pages/nosotros.html"
+                  href="../pages/nosotros.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover"
                   >Acerca de nosotros</a
                 >
