creacion de pagina de registro y se agrego el link en las otras paginas

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="./pages/registro.html"
                       ><i class="bi bi-caret-right"></i> Registrarse</a
                     >
                   </li>
