--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -106,7 +106,7 @@
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="./registro.html"
                       ><i class="bi bi-caret-right"></i> Registrarse</a
                     >
                   </li>
