--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -46,7 +46,7 @@
                     <a class="nav-link me-4 dropdown-toggle" href="#" id="menudropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Opciones</a>
                     <ul class="dropdown-menu" aria-labelledby="menudropdown">
                       <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right"></i> Login</a></li>
-                      <li><a class="dropdown-item" href="#"><i class="bi bi-caret-right"></i> Registrarse</a></li>
+                      <li><a class="dropdown-item" href="./registro.html"><i class="bi bi-caret-right"></i> Registrarse</a></li>
                       <li><a class="dropdown-item" href="../pages/contacto.html"><i class="bi bi-caret-right"></i> Contacto</a></li>
                     </ul>
                   </li>
