--- a/pages/registro.html
+++ b/pages/registro.html
@@ -137,21 +137,151 @@
     </header>
     <main>
         <section>
-            <div class="container">
-              <div class="text-center">
-                <img
-                  src="../img/imgError404.gif"
-                  alt="imagen error 404"
-                  class="w-50 rounded-pill mt-3"
-                />
-                <h3 class="mb-3">¡Oops!.... Página no encontrada</h3>
-                <p>Parece que te perdiste... La página que buscas no existe.</p>
-                <a href="../index.html" class="btn btn-primary btn-error mb-3 botonerror" disabled>
-                  Volver al inicio
-                </a>
-              </div>
+            <article class="container">
+            <div class="row justify-content-center mt-5">
+                <div class="col-12 col-md-6">
+                    <!-- TÍTULO A LA IZQUIERDA -->
+        <h2 class="mb-4 text-start logo">Crea tu cuenta</h2>
+              <form>
+                <div class="mb-3">
+                  <label for="Nombre" class="form-label">Nombre *</label>
+                  <input
+                    type="text"
+                    class="form-control bg-light"
+                    id="Nombre"
+                    placeholder="Juan"
+                    pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ\s]{2,50}$"
+                    title="Debe contener solo letras y espacios (mínimo 2 caracteres)"
+                    required
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="Apellido" class="form-label">Apellido *</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="Apellido"
+                    placeholder="Perez"
+                    pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ\s]{2,50}$"
+                    title="Debe contener solo letras y espacios (mínimo 2 caracteres)"
+                    required
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="correo" class="form-label">Email *</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="correo"
+                    placeholder="juanperez@mail.com"
+                    pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+                    title="Debe ser un correo válido (juanperez@mail.com)"
+                    required
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="NombreDeUsuario" class="form-label"
+                    >Nombre de usuario</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="NombreDeUsuario"
+                    placeholder="Ej: juan_perez"
+                    pattern="^[a-zA-Z0-9._]{4,16}$"
+                    title="Debe contener solo letras, números, guion bajo (_) y punto (.) (4-16 caracteres)"
+                    required
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="Numero" class="form-label">Teléfono</label>
+                  <input
+                    type="tel"
+                    class="form-control"
+                    id="Numero"
+                    placeholder="Ej: 1122334455"
+                    pattern="^\d{10,15}$"
+                    title="Debe contener entre 10 y 15 dígitos numéricos"
+                    required
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="domicilio" class="form-label">Domicilio *</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="domicilio"
+                    placeholder="Calle, Número, Ciudad"
+                    pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ0-9\s.,#-]{5,100}$"
+                    title="Dirección completa"
+                    required
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="codigoPostal" class="form-label"
+                    >Código Postal *</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="codigoPostal"
+                    placeholder="12345"
+                    pattern="^[A-Za-z0-9\s-]{4,10}$"
+                    title="Debe contener solo números o letras (mínimo 4 y máximo 10 caracteres)"
+                    required
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="contraseña" class="form-label"
+                    >Contraseña *</label
+                  >
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="contraseña"
+                    placeholder="Ingresa tu contraseña"
+                    pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,20}$"
+                    title="Debe contener al menos 8 caracteres, una letra, un número y un símbolo especial"
+                    required
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="repetirContraseña" class="form-label"
+                    >Repetir Contraseña *</label
+                  >
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="repetirContraseña"
+                    placeholder="Repite tu contraseña"
+                    pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,20}$"
+                    title="Debe contener al menos 8 caracteres, una letra, un número y un símbolo especial"
+                    required
+                  />
+                </div>
+
+                <div id="ayudaCorreo" class="form-text text-secondary media">
+                  Los campos con (*) son obligatorios
+                </div>
+
+                <div class="mb-4 d-flex justify-content-end">
+                  <button type="submit" class="btn btn-primary btn-error mb-3 botonerror">
+                    Registrar
+                  </button>
+                </div>
+                </form>
+                </div>
             </div>
-          </section>
+            </article>
+        </section>
     </main>
     <footer class="bg-primary-subtle pt-5 py-3 text-center text-md-start">
         <div class="container">
