--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <p class="card-text">
                   Monitor LED Gadnic 27 pulgadas Alta Resolución
                 </p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -268,7 +268,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Monitor LED de 43 pulgadas-Noblex</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/tv1.html" class="btn colorEstiloGrilla mt-auto text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -284,7 +284,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Pantalla curva, Samsung 80 pulgadas</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -301,7 +301,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Full TV 32" HD TCL L32S5400</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -317,7 +317,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Monitor Curvo 49 pulgadas Samsung</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -333,7 +333,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante JBL, bluetooth, portatil</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -349,7 +349,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante Bose Soundlink Flex blanco</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -365,7 +365,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Audio</b></h3>
                 <p class="card-text">Home Theater System Bose 3.1</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -381,7 +381,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante portatil Stromberg 110</p>
-                <a href="#" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
                   ><b>Visitar</b></a
                 >
               </div>
