errores correguidos en el nav de contacto.

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,16 +47,6 @@
             />
             <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
           </a>
-          <!--Carrito en dispositivos pequeños-->
-          <a href="#" class="d-lg-none ms-1 me-4 position-relative">
-            <i class="bi bi-cart3" style="font-size: 1.8rem; color: #000"></i>
-            <span
-              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-            >
-              3
-              <span class="visually-hidden">productos en el carrito</span>
-            </span>
-          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -82,7 +72,7 @@
                 />
               </form>
               <li class="nav-item">
-                <a class="nav-link me-5" aria-current="page" href="./index.html"
+                <a class="nav-link me-5" aria-current="page" href="../index.html"
                   >Inicio</a
                 >
               </li>
@@ -119,16 +109,6 @@
               </li>
             </ul>
           </div>
-          <!--Carrito en pantallas large-->
-          <a href="#" class="ms-4 d-none d-lg-block me-4 position-relative">
-            <i class="bi bi-cart3" style="font-size: 1.8rem; color: #000"></i>
-            <span
-              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-            >
-              3
-              <span class="visually-hidden">productos en el carrito</span>
-            </span>
-          </a>
         </div>
       </nav>
     </header>
