--- a/index.html
+++ b/index.html
@@ -167,8 +167,9 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
+            <!-- img 1 -->
             <img
-              src="./img/muchos electrodomesticos2.jpg"
+              src="./img/CARRR1.avif"
               class="d-block w-100 carruselPpalImg"
               alt="varios electrodomesticos"
             />
@@ -184,8 +185,9 @@
             </div>
           </div>
           <div class="carousel-item">
+            <!-- img 2 -->
             <img
-              src="./img/muchos electrodomesticos.jpg"
+              src="./img/CARR2.jpg"
               class="d-block w-100 carruselPpalImg"
               alt="electrodomesticos varios"
             />
@@ -199,8 +201,9 @@
             </div>
           </div>
           <div class="carousel-item">
+            <!-- img 3 -->
             <img
-              src="./img/muchos electrodomesticos4.jpg"
+              src="./img/CARR3.jpg"
               class="d-block w-100 carruselPpalImg"
               alt="teclado de computadora con electrodomesticos"
             />
