login y links añadidos

--- a/pages/tv1.html
+++ b/pages/tv1.html
@@ -28,7 +28,7 @@
             <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
           </a>
           <!--Carrito en dispositivos pequeños-->
-          <a href="#" class="d-lg-none ms-1 me-4 position-relative">
+          <a href="./carrito.html" class="d-lg-none ms-1 me-4 position-relative">
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -83,7 +83,7 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="./login.html"
                       ><i class="bi bi-caret-right"></i> Login</a
                     >
                   </li>
@@ -102,7 +102,7 @@
             </ul>
           </div>
           <!--Carrito en pantallas large-->
-          <a href="#" class="ms-4 d-none d-lg-block me-4 position-relative">
+          <a href="./carrito.html" class="ms-4 d-none d-lg-block me-4 position-relative">
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -172,7 +172,7 @@
                   </div>
                 </label>
                 <a href="#" class="btn btn-primary btn-lg mt-3 me-3"><strong>Comprar ahora</strong></a>
-                <a href="#" class="btn bg-primary-subtle text-primary btn-lg mt-3"><strong>Agregar al carrito</strong></a>
+                <a href="./carrito.html" class="btn bg-primary-subtle text-primary btn-lg mt-3"><strong>Agregar al carrito</strong></a>
               </div>
             </div>
             <!--pagoUnico-->
