--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -47,7 +47,7 @@
             <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
           </a>
           <!--Carrito en dispositivos pequeños-->
-          <a href="#" class="d-lg-none ms-1 me-4 position-relative">
+          <a href="./carrito.html" class="d-lg-none ms-1 me-4 position-relative">
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -102,7 +102,7 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="./login.html"
                       ><i class="bi bi-caret-right"></i> Login</a
                     >
                   </li>
@@ -121,7 +121,7 @@
             </ul>
           </div>
           <!--Carrito en pantallas large-->
-          <a href="#" class="ms-4 d-none d-lg-block me-4 position-relative">
+          <a href="./carrito.html" class="ms-4 d-none d-lg-block me-4 position-relative">
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
