achico el tamano del video

--- a/detalleCategorias.html
+++ b/detalleCategorias.html
@@ -140,7 +140,7 @@
         <b><i class="bi bi-chevron-double-right"></i> Celulares</b>
       </h2>
       <!-- Video -->
-      <article class="mt-2 alturaVide">
+      <article class="mt-2 alturaVideo">
         <video width="100%" controls autoplay muted loop class="h-100">
           <source src="./img/celulares/video.mp4" type="video/mp4" />
         </video>
