corregimos el color y hover de los botones

--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -172,7 +172,7 @@
                   </p>
                 </div>
                 <div>
-                  <a href="../pages/error404.html" class="btn botonerror text-white w-100">Ver más</a>
+                  <a href="../pages/error404.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
                 </div>
               </div>
             </div>
@@ -195,7 +195,7 @@
                     <b>Heladera Hisense - Puertas Inverter </b>
                   </p>
                   <div>
-                    <a href="../pages/heladera1.html" class="btn botonerror text-white w-100">Ver más</a>
+                    <a href="../pages/heladera1.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -219,7 +219,7 @@
                     <b>Heladera Dream Ciclica con Freezer </b>
                   </p>
                   <div>
-                    <a href="../pages/error404.html" class="btn botonerror text-white w-100">Ver más</a>
+                    <a href="../pages/error404.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -243,7 +243,7 @@
                     <b>Heladera LG - Bajo consumo 300Lts</b>
                   </p>
                   <div>
-                    <a href="../pages/error404.html" class="btn botonerror text-white w-100">Ver más</a>
+                    <a href="../pages/error404.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -267,7 +267,7 @@
                     <b>Heladera Sigma - No Frost 260 lts</b>
                   </p>
                   <div>
-                    <a href="../pages/error404.html" class="btn botonerror text-white w-100">Ver más</a>
+                    <a href="../pages/error404.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
                   </div>
                 </div>
               </div>
@@ -291,7 +291,7 @@
                     <b>Heladera Whirpool - No Frost 320 lts </b>
                   </p>
                   <div>
-                    <a href="../pages/error404.html" class="btn botonerror text-white w-100">Ver más</a>
+                    <a href="../pages/error404.html" class="btn btn-primary btn-error botonerror text-light w-100">Ver más</a>
                   </div>
                 </div>
               </div>
