--- a/pages/login.html
+++ b/pages/login.html
@@ -80,7 +80,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link me-4 dropdown-toggle"
+                  class="nav-link me-4 pe-5 dropdown-toggle"
                   href="#"
                   id="menudropdown"
                   role="button"
@@ -151,7 +151,7 @@
                 <a href="./error404.html"> Olvide mi contraseña</a>
 
                 <div class="d-flex justify-content-end">
-                  <button type="submit" class="btn btn-primary">
+                  <button type="submit" class="btn btn-primary btn-error botonerror text-light">
                     Iniciar Sesión
                   </button>
                 </div>
