--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <p class="card-text">
                   Monitor LED Gadnic 27 pulgadas Alta Resolución
                 </p>
-                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -266,7 +266,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Monitor LED de 43 pulgadas-Noblex</p>
-                <a href="./pages/tv1.html" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/tv1.html" class="btn btn-primary btn-error botonerror text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -282,7 +282,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Pantalla curva, Samsung 80 pulgadas</p>
-                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -299,7 +299,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Full TV 32" HD TCL L32S5400</p>
-                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -315,7 +315,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
                 <p class="card-text">Monitor Curvo 49 pulgadas Samsung</p>
-                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -331,7 +331,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante JBL, bluetooth, portatil</p>
-                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -347,7 +347,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante Bose Soundlink Flex blanco</p>
-                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -363,7 +363,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Audio</b></h3>
                 <p class="card-text">Home Theater System Bose 3.1</p>
-                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -379,7 +379,7 @@
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
                 <p class="card-text">Parlante portatil Stromberg 110</p>
-                <a href="./pages/error404.html" class="btn colorEstiloGrilla mt-auto text-light"
+                <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
                   ><b>Visitar</b></a
                 >
               </div>
@@ -408,7 +408,7 @@
             </p>
           </div>
           <div>
-            <a href="./pages/heladeras.html" class="btn botonHela text-light">
+            <a href="./pages/heladeras.html" class="btn btn-primary btn-error botonerror text-light">
               <b>Buscá la tuya</b>
             </a>
           </div>
@@ -461,8 +461,8 @@
             </p>
           </div>
           <div>
-            <a href="./pages/detalleCategorias.html" class="btn botonHela text-light">
-              <b>Buscalo!</b>
+            <a href="./pages/celulares.html" class="btn btn-primary btn-error botonerror text-light">
+              <b>Buscalo!</b> 
             </a>
           </div>
         </article>
