--- a/pages/error404.html
+++ b/pages/error404.html
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@1,300&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/png" sizes="34x34" href="./img/favicon1.png" />
+    <link rel="icon" type="image/png" sizes="34x34" href="../img/favicon1.png" />
     <link rel="stylesheet" href="../css/style.css" />
     <title>
       ElectroHouse: Electrodomésticos, Tecnología y Artículos de Hogar
