--- a/pages/registro.html
+++ b/pages/registro.html
@@ -46,16 +46,6 @@
             />
             <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
           </a>
-          <!--Carrito en dispositivos pequeños-->
-          <a href="./carrito.html" class="d-lg-none ms-1 me-4 position-relative">
-            <i class="bi bi-cart3 carrito"></i>
-            <span
-              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-            >
-              3
-              <span class="visually-hidden">productos en el carrito</span>
-            </span>
-          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -88,11 +78,11 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link me-5" href="#">Novedades</a>
+                <a class="nav-link me-5" href="../pages/error404.html">Novedades</a>
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link me-4 dropdown-toggle"
+                  class="nav-link me-4 pe-5 dropdown-toggle"
                   href="#"
                   id="menudropdown"
                   role="button"
@@ -102,7 +92,7 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="./login.html"
+                    <a class="dropdown-item" href="../pages/login.html"
                       ><i class="bi bi-caret-right"></i> Login</a
                     >
                   </li>
@@ -112,7 +102,7 @@
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./contacto.html"
+                    <a class="dropdown-item" href="../pages/contacto.html"
                       ><i class="bi bi-caret-right"></i> Contacto</a
                     >
                   </li>
@@ -120,16 +110,6 @@
               </li>
             </ul>
           </div>
-          <!--Carrito en pantallas large-->
-          <a href="./carrito.html" class="ms-4 d-none d-lg-block me-4 position-relative">
-            <i class="bi bi-cart3 carrito"></i>
-            <span
-              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-            >
-              3
-              <span class="visually-hidden">productos en el carrito</span>
-            </span>
-          </a>
         </div>
       </nav>
     </header>
