corregimos la forma de las fotos en la pagina "nosotros" asi como tambien sacamos styles del index

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -123,53 +123,53 @@
            </div>
            <div class="container-fluid row d-flex justify-content-center gap-5">
               <h3 class="text-white text-center">⚡Conocé al equipo detrás de ElectroHouse⚡</h3>
-              <div class="col-12 col-md-6 col-lg-3">
-                <div class="card border-black" style="width: 15rem; height: 100%;">
-                  <div style="height: 350px; overflow: hidden;">
-                    <img src="../img/nosotros/maxigomez.jpg" class="card-img-top h-100 w-100 object-fit-cover" alt="...">
+              <div class="col-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                <div class=" text-center nosotros">
+                  <div class="imgnosotros">
+                    <img src="../img/nosotros/maxigomez.jpg" class="w-100 h-100 object-fit-cover" alt="fotografía de Maximiliano Gómez Tolrá">
                   </div>
-                  <div class="card-body">
-                    <p class="card-text text-center"><strong>Maximiliano Gómez Tolrá</strong></p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-12 col-md-6 col-lg-3">
-                <div class="card border-black" style="width: 15rem; height: 100%;">
-                  <div style="height: 350px; overflow: hidden;">
-                    <img src="../img/nosotros/joselpadilla.jpg" class="card-img-top h-100 w-100 object-fit-cover" alt="...">
-                  </div>
-                  <div class="card-body">
-                    <p class="card-text text-center"><strong>José Ledesma Padilla</strong></p>
+                  <div class="rounded-5 bg-white p-2">
+                    <p class="mt-3 fs-5"><strong>Maximiliano Gómez Tolrá</strong></p>
                   </div>
                 </div>
               </div>
-              <div class="col-12 col-md-6 col-lg-3">
-                <div class="card border-black" style="width: 15rem; height: 100%;">
-                  <div style="height: 350px; overflow: hidden;">
-                    <img src="../img/nosotros/maxiordoñez.jpg" class="card-img-top h-100 w-100 object-fit-cover" alt="...">
+              <div class="col-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                <div class=" text-center nosotros">
+                  <div class="imgnosotros">
+                    <img src="../img/nosotros/joselpadilla.jpg" class="w-100 h-100 object-fit-cover" alt="fotografía de José Ledesma Padilla">
                   </div>
-                  <div class="card-body">
-                    <p class="card-text text-center"><strong>Maximiliano Ordoñez</strong></p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-12 col-md-6 col-lg-3">
-                <div class="card border-black" style="width: 15rem; height: 100%;">
-                  <div style="height: 350px; overflow: hidden;">
-                    <img src="../img/nosotros/soficisterna.jpg" class="card-img-top h-100 w-100 object-fit-cover" alt="...">
-                  </div>
-                  <div class="card-body">
-                    <p class="card-text text-center"><strong>Sofia Cisterna</strong></p>
+                  <div class="rounded-5 bg-white p-2">
+                    <p class="mt-3 fs-5"><strong>José Ledesma Padilla</strong></p>
                   </div>
                 </div>
               </div>
-              <div class="col-12 col-md-6 col-lg-3">
-                <div class="card border-black" style="width: 15rem; height: 100%;">
-                  <div style="height: 350px; overflow: hidden;">
-                    <img src="../img/nosotros/joaquinbresla.jpg" class="card-img-top h-100 w-100 object-fit-cover" alt="...">
+              <div class="col-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                <div class=" text-center nosotros">
+                  <div class="imgnosotros">
+                    <img src="../img/nosotros/maxiordoñez.jpg" class="w-100 h-100 object-fit-cover" alt="fotografía de Maximiliano Ordoñez">
                   </div>
-                  <div class="card-body">
-                    <p class="card-text text-center"><strong>Joaquín Albornoz Bresla</strong></p>
+                  <div class="rounded-5 bg-white p-2">
+                    <p class="mt-3 fs-5"><strong>Maximiliano Ordoñez</strong></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                <div class=" text-center nosotros">
+                  <div class="imgnosotros">
+                    <img src="../img/nosotros/soficisterna.jpg" class="w-100 h-100 object-fit-cover" alt="fotografía de Ana Sofia Cisterna">
+                  </div>
+                  <div class="rounded-5 bg-white p-2">
+                    <p class="mt-3 fs-5"><strong>Sofía Cisterna</strong></p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 col-lg-3 d-flex justify-content-center">
+                <div class=" text-center nosotros">
+                  <div class="imgnosotros">
+                    <img src="../img/nosotros/joaquinbresla.jpg" class="w-100 h-100 object-fit-cover" alt="fotografía de Joaquín Albornoz Bresla">
+                  </div>
+                  <div class="rounded-5 bg-white p-2">
+                    <p class="mt-3 fs-5"><strong>Joaquín Albornoz Bresla</strong></p>
                   </div>
                 </div>
               </div>
