--- a/pages/heladera1.html
+++ b/pages/heladera1.html
@@ -116,7 +116,7 @@
     </header>
     <main>
       <section class="container my-5 d-flex justify-content-center">
-        <div class="card shadow-lg border-0 rounded-4 overflow-hidden pb-5" style="max-width: 1300px; width: 100%;">
+        <div class="card shadow-lg border-0 rounded-4 overflow-hidden pb-5 tamañocard">
         <div class="row g-0">
         <!--imagen-->
         <div class="col-md-5">
