modificamos los destinos de los links en todas las paginas

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
               <img
                 src="./img/AudioTv/monitor led gadnic 27 pulg.jpg"
                 class="card-img-top alturaImgGrilla"
-                alt="televisor 27 pulg"
+                alt="televisor Gadnic 27 pulgadas"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
@@ -277,7 +277,7 @@
               <img
                 src="./img/AudioTv/tv 80 pulgadas.webp"
                 class="card-img-top alturaImgGrilla"
-                alt="televisor pantalla curva"
+                alt="televisor pantalla curva 80 pulgadas Samsung"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
@@ -294,11 +294,11 @@
                 src="./img/AudioTv/Smart-Tv-32-FullHD-TCL-L32S5400-Frameless-Android-TV-1.webp"
                 class="card-img-top alturaImgGrilla"
                 alt="Televisor con pantalla a
-              colores 32"
+              colores 32 pulagadas TCL"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
-                <p class="card-text">Full TV 32" HD TCL L32S5400</p>
+                <p class="card-text">Full TV 32 pulgadas HD TCL L32S5400</p>
                 <a href="./pages/error404.html" class="btn btn-primary btn-error botonerror text-light"
                   ><b>Visitar</b></a
                 >
@@ -310,7 +310,7 @@
               <img
                 src="./img/AudioTv/tv pantalla curva.webp"
                 class="card-img-top alturaImgGrilla"
-                alt="televisor pantalla curva"
+                alt="televisor pantalla curva Samsung 49 pulgadas"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Smart TV</b></h3>
@@ -358,7 +358,7 @@
               <img
                 src="./img/AudioTv/home teatre2.jpg"
                 class="card-img-top alturaImgGrilla"
-                alt="home teatre"
+                alt="home theater bose"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Audio</b></h3>
@@ -374,7 +374,7 @@
               <img
                 src="./img/AudioTv/parlante portatil2.webp"
                 class="card-img-top alturaImgGrilla"
-                alt="equipo de hometheater"
+                alt="parlante stromberg"
               />
               <div class="card-body text-center alineaBotonGrilla">
                 <h3 class="card-title"><b>Parlantes</b></h3>
