--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -37,7 +37,7 @@
         <div class="container-fluid">
           <a
             class="navbar-brand d-flex justify-content-end"
-            href="./error404.html"
+            href="../index.html"
           >
             <img
               src="../img/EH1.png"
@@ -97,7 +97,7 @@
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./registro.html"
+                    <a class="dropdown-item" href="../pages/registro.html"
                       ><i class="bi bi-caret-right"></i> Registrarse</a
                     >
                   </li>
@@ -324,28 +324,28 @@
                 <h4 class="text-dark">Información</h4>
                 <li class="mb-1">
                   <a
-                    href="./nosotros.html"
+                    href="../pages/nosotros.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Acerca de nosotros</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Servicio al cliente</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Terminos y condiciones</a
                   >
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Politicas de privacidad</a
                   >
@@ -357,28 +357,28 @@
                 <h4 class="text-dark">Redes Sociales</h4>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-facebook text-primary"></i> Facebook</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-instagram text-danger"></i> Instagram</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-linkedin text-primary-emphasis"></i>
                     Linkedin</a
@@ -391,7 +391,7 @@
                 <h4 class="text-dark">Metodos de Pago</h4>
                 <li class="mb-2 mt-2">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     ><img
                       src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
@@ -401,7 +401,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     ><img
                       src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
