--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -37,7 +37,7 @@
         <div class="container-fluid">
           <a
             class="navbar-brand d-flex justify-content-end"
-            href="./error404.html"
+            href="../index.html"
           >
             <img
               src="../img/EH1.png"
@@ -47,7 +47,7 @@
             <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
           </a>
           <!--Carrito en dispositivos pequeños-->
-          <a href="./carrito.html" class="d-lg-none ms-1 me-4 position-relative">
+          <a href="../pages/carrito.html" class="d-lg-none ms-1 me-4 position-relative">
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -88,7 +88,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link me-5" href="#">Novedades</a>
+                <a class="nav-link me-5" href="../pages/error404.html">Novedades</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -102,17 +102,17 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="./login.html"
+                    <a class="dropdown-item" href="../pages/login.html"
                       ><i class="bi bi-caret-right"></i> Login</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./registro.html"
+                    <a class="dropdown-item" href="../pages/registro.html"
                       ><i class="bi bi-caret-right"></i> Registrarse</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./contacto.html"
+                    <a class="dropdown-item" href="../pages/contacto.html"
                       ><i class="bi bi-caret-right"></i> Contacto</a
                     >
                   </li>
@@ -121,7 +121,7 @@
             </ul>
           </div>
           <!--Carrito en pantallas large-->
-          <a href="./carrito.html" class="ms-4 d-none d-lg-block me-4 position-relative">
+          <a href="../pages/carrito.html" class="ms-4 d-none d-lg-block me-4 position-relative">
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -209,7 +209,7 @@
               <img
                 src="../img/Heladeras/dreammmm.jpg"
                 class="card-img-top"
-                alt="celular motorola"
+                alt="heladera dream"
               />
               <div
                 class="card-body text-center d-flex flex-column justify-content-between"
@@ -233,7 +233,7 @@
               <img
                 src="../img/Heladeras/lg.avif"
                 class="card-img-top"
-                alt="celular motorola e22"
+                alt="heladera LG"
               />
               <div
                 class="card-body text-center d-flex flex-column justify-content-between"
@@ -257,7 +257,7 @@
               <img
                 src="../img/Heladeras/sigma.jpg"
                 class="card-img-top"
-                alt="galaxy a35"
+                alt="heladera sigma"
               />
               <div
                 class="card-body text-center d-flex flex-column justify-content-between"
@@ -281,7 +281,7 @@
               <img
                 src="../img/Heladeras/patrik.jpg"
                 class="card-img-top"
-                alt="motorola g14"
+                alt="heladera whirpool"
               />
               <div
                 class="card-body text-center d-flex flex-column justify-content-between"
@@ -311,15 +311,15 @@
                 <a class="page-link" href="../index.html">1</a>
               </li>
               <li class="page-item">
-                <a class="page-link" href="./heladeras.html">2</a>
+                <a class="page-link" href="../pages/heladeras.html">2</a>
               </li>
               <li class="page-item">
-                <a class="page-link" href="../detalleCategorias.html">3</a>
+                <a class="page-link" href="../pages/celulares.html">3</a>
               </li>
               <li class="page-item">
                 <a
                   class="page-link"
-                  href="../detalleCategorias.html"
+                  href="../pages/celulares.html"
                   aria-label="Next"
                 >
                   <span aria-hidden="true">&raquo;</span>
@@ -352,28 +352,28 @@
                 <h4 class="text-dark">Información</h4>
                 <li class="mb-1">
                   <a
-                    href="./nosotros.html"
+                    href="../pages/nosotros.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Acerca de nosotros</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Servicio al cliente</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Terminos y condiciones</a
                   >
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Politicas de privacidad</a
                   >
@@ -385,28 +385,28 @@
                 <h4 class="text-dark">Redes Sociales</h4>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-facebook text-primary"></i> Facebook</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-instagram text-danger"></i> Instagram</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-linkedin text-primary-emphasis"></i>
                     Linkedin</a
@@ -419,7 +419,7 @@
                 <h4 class="text-dark">Metodos de Pago</h4>
                 <li class="mb-2 mt-2">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     ><img
                       src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
@@ -429,7 +429,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     ><img
                       src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
