--- a/pages/login.html
+++ b/pages/login.html
@@ -74,7 +74,7 @@
                 <a class="nav-link me-5" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link me-5" href="./error404.html"
+                <a class="nav-link me-5" href="../pages/error404.html"
                   >Novedades</a
                 >
               </li>
@@ -90,17 +90,17 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="../pages/login.html"
                       ><i class="bi bi-caret-right"></i> Login</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./registro.html"
+                    <a class="dropdown-item" href="../pages/registro.html"
                       ><i class="bi bi-caret-right"></i> Registrarse</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./contacto.html"
+                    <a class="dropdown-item" href="../pages/contacto.html"
                       ><i class="bi bi-caret-right"></i> Contacto</a
                     >
                   </li>
@@ -148,7 +148,7 @@
                   />
                 </div>
 
-                <a href="./error404.html"> Olvide mi contraseña</a>
+                <a href="../pages/error404.html"> Olvide mi contraseña</a>
 
                 <div class="d-flex justify-content-end">
                   <button type="submit" class="btn btn-primary btn-error botonerror text-light">
@@ -168,7 +168,7 @@
             class="col-12 col-md-4 col-lg-3 d-flex gap-3 align-items-center mb-4 justify-content-center justify-content-md-start"
           >
             <a
-              href="./index.html"
+              href="../index.html"
               class="link-underline-opacity-0 d-flex align-items-center gap-2"
             >
               <img src="../img/EH1.png" alt="icono" class="img-fluid imgfoot"
@@ -179,28 +179,28 @@
               <h4 class="text-dark">Información</h4>
               <li class="mb-1">
                 <a
-                  href="./nosotros.html"
+                  href="../pages/nosotros.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover"
                   >Acerca de nosotros</a
                 >
               </li>
               <li class="mb-1">
                 <a
-                  href="./error404.html"
+                  href="../pages/error404.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover"
                   >Servicio al cliente</a
                 >
               </li>
               <li class="mb-1">
                 <a
-                  href="./error404.html"
+                  href="../pages/error404.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover"
                   >Terminos y condiciones</a
                 >
               </li>
               <li>
                 <a
-                  href="./error404.html"
+                  href="../pages/error404.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover"
                   >Politicas de privacidad</a
                 >
@@ -212,28 +212,28 @@
               <h4 class="text-dark">Redes Sociales</h4>
               <li class="mb-1">
                 <a
-                  href="./error404.html"
+                  href="../pages/error404.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                   ><i class="bi bi-facebook text-primary"></i> Facebook</a
                 >
               </li>
               <li class="mb-1">
                 <a
-                  href="./error404.html"
+                  href="../pages/error404.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                   ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
                 >
               </li>
               <li class="mb-1">
                 <a
-                  href="./error404.html"
+                  href="../pages/error404.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                   ><i class="bi bi-instagram text-danger"></i> Instagram</a
                 >
               </li>
               <li class="mb-1">
                 <a
-                  href="./error404.html"
+                  href="../pages/error404.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                   ><i class="bi bi-linkedin text-primary-emphasis"></i>
                   Linkedin</a
@@ -246,7 +246,7 @@
               <h4 class="text-dark">Metodos de Pago</h4>
               <li class="mb-2 mt-2">
                 <a
-                  href="./error404.html"
+                  href="../pages/error404.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover"
                   ><img
                     src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
@@ -256,7 +256,7 @@
               </li>
               <li>
                 <a
-                  href="./error404.html"
+                  href="../pages/error404.html"
                   class="link-underline-opacity-25 link-underline-opacity-100-hover"
                   ><img
                     src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
