--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
           <a
             class="navbar-brand d-flex justify-content-end"
-            href="./error404.html"
+            href="../index.html"
           >
             <img
               src="../img/EH1.png"
@@ -28,7 +28,7 @@
             <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
           </a>
           <!--Carrito en dispositivos pequeños-->
-          <a href="./carrito.html" class="d-lg-none ms-1 me-4 position-relative">
+          <a href="../pages/carrito.html" class="d-lg-none ms-1 me-4 position-relative">
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -69,7 +69,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link me-5" href="#">Novedades</a>
+                <a class="nav-link me-5" href="../pages/error404.html">Novedades</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -83,17 +83,17 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="./login.html"
+                    <a class="dropdown-item" href="../pages/login.html"
                       ><i class="bi bi-caret-right"></i> Login</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./registro.html"
+                    <a class="dropdown-item" href="../pages/registro.html"
                       ><i class="bi bi-caret-right"></i> Registrarse</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./contacto.html"
+                    <a class="dropdown-item" href="../pages/contacto.html"
                       ><i class="bi bi-caret-right"></i> Contacto</a
                     >
                   </li>
@@ -198,28 +198,28 @@
                 <h4 class="text-dark">Información</h4>
                 <li class="mb-1">
                   <a
-                    href="./nosotros.html"
+                    href="../pages/nosotros.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Acerca de nosotros</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Servicio al cliente</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Terminos y condiciones</a
                   >
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Politicas de privacidad</a
                   >
@@ -231,28 +231,28 @@
                 <h4 class="text-dark">Redes Sociales</h4>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-facebook text-primary"></i> Facebook</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-instagram text-danger"></i> Instagram</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-linkedin text-primary-emphasis"></i>
                     Linkedin</a
@@ -265,7 +265,7 @@
                 <h4 class="text-dark">Metodos de Pago</h4>
                 <li class="mb-2 mt-2">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     ><img
                       src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
@@ -275,7 +275,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     ><img
                       src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
