--- a/pages/telefono1.html
+++ b/pages/telefono1.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
           <a
             class="navbar-brand d-flex justify-content-end"
-            href="./error404.html"
+            href="../index.html"
           >
             <img
               src="../img/EH1.png"
@@ -28,7 +28,7 @@
             <strong class="mt-1 ms-2 fs-3 logo">ElectroHouse</strong>
           </a>
           <!--Carrito en dispositivos pequeños-->
-          <a href="./carrito.html" class="d-lg-none ms-1 me-4 position-relative">
+          <a href="../pages/carrito.html" class="d-lg-none ms-1 me-4 position-relative">
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -69,7 +69,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link me-5" href="#">Novedades</a>
+                <a class="nav-link me-5" href="../pages/error404.html">Novedades</a>
               </li>
               <li class="nav-item dropdown">
                 <a
@@ -83,17 +83,17 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="./login.html"
+                    <a class="dropdown-item" href="../pages/login.html"
                       ><i class="bi bi-caret-right"></i> Login</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./registro.html"
+                    <a class="dropdown-item" href="../pages/registro.html"
                       ><i class="bi bi-caret-right"></i> Registrarse</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./contacto.html"
+                    <a class="dropdown-item" href="../pages/contacto.html"
                       ><i class="bi bi-caret-right"></i> Contacto</a
                     >
                   </li>
@@ -102,7 +102,7 @@
             </ul>
           </div>
           <!--Carrito en pantallas large-->
-          <a href="./carrito.html" class="ms-4 d-none d-lg-block me-4 position-relative">
+          <a href="../pages/carrito.html" class="ms-4 d-none d-lg-block me-4 position-relative">
             <i class="bi bi-cart3 carrito"></i>
             <span
               class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
@@ -125,7 +125,7 @@
         <!--telefono y precio-->
         <div class="col-md-7">
         <div class="card-body p-4">
-          <a href="#" class="fs-5 mb-5 text-decoration-none">Ver más productos marca Samsung</a>
+          <a href="../pages/error404.html" class="fs-5 mb-5 text-decoration-none">Ver más productos marca Samsung</a>
           <p class="mt-3 fs-5 text-secondary">Nuevo | +50 vendidos</p>
           <h5 class="display-6 mb-4 text-black"><b>Samsung Galaxy Z Flip 5 5G Dual SIM 128 GB white 8 GB RAM </b></h5>
           <p class="fs-4 text-secondary"><del>$ 660.000</del></p>
@@ -168,7 +168,7 @@
                     <p class="fs-1 text-black">$ 451.481</p>
                     <p class="text-success mb-3">Mismo precio en 9 cuotas de $ 50.164,56</p>
                     <p class="mt-2"><strong class="text-success">Llega gratis mañana</strong></p>
-                    <a href="#" class="text-decoration-none mb-4">Más formas de entrega</a>
+                    <a href="../pages/error404.html" class="text-decoration-none mb-4">Más formas de entrega</a>
                     <div class="mb-3">
                       <label class="form-label fw-bold">Stock disponible</label>
                       <div class="d-flex align-items-center">
@@ -184,8 +184,8 @@
                     </div>
                   </div>
                 </label>
-                <a href="#" class="btn btn-primary btn-lg mt-3 me-3"><strong>Comprar ahora</strong></a>
-                <a href="#" class="btn bg-primary-subtle text-primary btn-lg mt-3"><strong>Agregar al carrito</strong></a>
+                <a href="../pages/error404.html" class="btn btn-primary btn-lg mt-3 me-3"><strong>Comprar ahora</strong></a>
+                <a href="../pages/carrito.html" class="btn bg-primary-subtle text-primary btn-lg mt-3"><strong>Agregar al carrito</strong></a>
               </div>
             </div>
             <!--pagoUnico-->
@@ -198,7 +198,7 @@
                     <p class="fs-1 text-black">$ 361.185</p>
                     <p class="text-secondary mb-3">Precio sin impuestos nacionales: $ 298.500</p>
                     <p class="mt-2"><strong class="text-success">Llega gratis mañana</strong></p>
-                    <a href="#" class="text-decoration-none mb-4">Más formas de entrega</a>
+                    <a href="../pages/error404.html" class="text-decoration-none mb-4">Más formas de entrega</a>
                     <div class="mb-3">
                       <label class="form-label fw-bold">Stock disponible</label>
                       <div class="d-flex align-items-center">
@@ -214,8 +214,8 @@
                     </div>
                   </div>
                 </label>
-                <a href="#" class="btn btn-primary btn-lg mt-3 me-3"><strong>Comprar ahora</strong></a>
-                <a href="#" class="btn bg-primary-subtle text-primary btn-lg mt-3"><strong>Agregar al carrito</strong></a>
+                <a href="../pages/error404.html" class="btn btn-primary btn-lg mt-3 me-3"><strong>Comprar ahora</strong></a>
+                <a href="../pages/carrito.html" class="btn bg-primary-subtle text-primary btn-lg mt-3"><strong>Agregar al carrito</strong></a>
               </div>
             </div>
            </form>
@@ -291,28 +291,28 @@
                 <h4 class="text-dark">Información</h4>
                 <li class="mb-1">
                   <a
-                    href="./nosotros.html"
+                    href="../pages/nosotros.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Acerca de nosotros</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Servicio al cliente</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Terminos y condiciones</a
                   >
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     >Politicas de privacidad</a
                   >
@@ -324,28 +324,28 @@
                 <h4 class="text-dark">Redes Sociales</h4>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-facebook text-primary"></i> Facebook</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-whatsapp text-success"></i> Whatsapp</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-instagram text-danger"></i> Instagram</a
                   >
                 </li>
                 <li class="mb-1">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover text-decoration-none text-dark"
                     ><i class="bi bi-linkedin text-primary-emphasis"></i>
                     Linkedin</a
@@ -358,7 +358,7 @@
                 <h4 class="text-dark">Metodos de Pago</h4>
                 <li class="mb-2 mt-2">
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     ><img
                       src="https://img.icons8.com/?size=100&id=Sq0VNi1Afgmj&format=png&color=000000"
@@ -368,7 +368,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../pages/error404.html"
                     class="link-underline-opacity-25 link-underline-opacity-100-hover"
                     ><img
                       src="https://img.icons8.com/?size=100&id=11079&format=png&color=000000"
